--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "lucide-react": "^0.323.0",
+    "mongodb": "^6.3.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -36,6 +37,7 @@
     "svix": "^1.18.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
