--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
+    "highlight.js": "^11.9.0",
     "lucide-react": "^0.323.0",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
@@ -38,7 +39,9 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
     "react-resizable": "^3.0.5",
+    "rehype-highlight": "^7.0.0",
     "svix": "^1.18.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
