--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@react-email/components": "^0.0.16",
     "@tanstack/react-query": "^5.22.2",
     "@uploadthing/react": "^6.4.0",
     "class-variance-authority": "^0.7.0",
@@ -42,6 +43,7 @@
     "react-markdown": "^9.0.1",
     "react-resizable": "^3.0.5",
     "rehype-highlight": "^7.0.0",
+    "resend": "^3.2.0",
     "svix": "^1.18.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
