--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@uploadthing/react": "^6.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.4",
     "framer-motion": "^11.0.5",
     "highlight.js": "^11.9.0",
     "lucide-react": "^0.323.0",
