--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,7 +13,7 @@
     "@clerk/nextjs": "^4.29.6",
     "@clerk/themes": "^1.7.9",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "5.12.1",
+    "@prisma/client": "5.15.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
