--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@clerk/nextjs": "^4.29.6",
     "@clerk/themes": "^1.7.9",
     "@hookform/resolvers": "^3.3.4",
+    "@livekit/components-react": "^2.3.3",
+    "@livekit/components-styles": "^1.0.12",
     "@prisma/client": "5.15.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -36,6 +38,7 @@
     "embla-carousel-react": "^8.0.4",
     "framer-motion": "^11.0.5",
     "highlight.js": "^11.9.0",
+    "livekit-server-sdk": "^2.5.0",
     "lucide-react": "^0.323.0",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
