--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@react-email/components": "^0.0.16",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "@tanstack/react-query": "^5.22.2",
     "@uploadthing/react": "^6.4.0",
     "class-variance-authority": "^0.7.0",
@@ -39,10 +41,13 @@
     "framer-motion": "^11.0.5",
     "highlight.js": "^11.9.0",
     "livekit-server-sdk": "^2.5.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.323.0",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "pusher": "^5.2.0",
+    "pusher-js": "8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
@@ -52,6 +57,7 @@
     "react-resizable": "^3.0.5",
     "rehype-highlight": "^7.0.0",
     "resend": "^3.2.0",
+    "stripe": "^16.2.0",
     "svix": "^1.18.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -62,6 +68,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.20.1",
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
